# apertium-lint

./: .editorconfig  .gitmodules  Makefile  README.md  apertium-lint.py  dix_lint.py  file_linter.py  lexd_lint.py  setup.cfg
apertium_lint/: __init__.py  file_linter.py
apertium_lint/tests/: base.py  test.py  test_cg.py  test_dix.py  test_lexc.py  test_lexd.py  test_modes.py  test_rtx.py  test_transfer.py  test_twolc.py
apertium_lint/tree_sitter/: cg.py  lexc.py  lexd.py  rtx.py  tree_sitter_linter.py  twolc.py
apertium_lint/xml/: dix.py  lrx.py  modes.py  transfer.py
linters/: file_linter.py
linters/tree_sitter/: cg.py  lexc.py  lexd.py  rtx.py  tree_sitter_langs.py  tree_sitter_linter.py  twolc.py
linters/xml/: dix.py  lrx.py  transfer.py  xml.py
