[metadata]
name = apertium_lint
version = 1.0.1
description = static analysis of Apertium files
long_description = file: README.md
keywords = apertium, linter
license = GPLv3+
license_files = LICENSE
author = Daniel Swanson
author_email = apertium@dangswan.com
home_page = http://github.com/apertium/apertium-lint

[options]
install_requires =
  tree-sitter-apertium >= 0.1.1
  lxml

[options.entry_points]
console_scripts =
  apertium-lint = apertium_lint:main
